# fastapi-kafka

./: main.py  pyproject.toml  requirements.txt
